# mini-teaclave-sgx-sdk

./: .gitignore  Cargo.toml  README.md
sgx_mini_alloc/: Cargo.toml
sgx_mini_alloc/src/: lib.rs
sgx_mini_panic_abort/: Cargo.toml
sgx_mini_panic_abort/src/: lib.rs
sgx_mini_shim/: Cargo.toml
sgx_mini_shim/src/: lib.rs
sgx_mini_tdh/: Cargo.toml
sgx_mini_tdh/src/: crypto.rs  dh.rs  ecp.rs  lib.rs  memeq.rs  rsgx.rs
sgx_mini_tls/: Cargo.toml
sgx_mini_tls/src/: lib.rs  local.rs
sgx_mini_tse/: Cargo.toml
sgx_mini_tse/src/: lib.rs  se.rs
sgx_mini_tseal/: Cargo.toml
sgx_mini_tseal/src/: aad.rs  internal.rs  lib.rs  rsgx.rs  seal.rs
sgx_mini_tshim/: Cargo.toml
sgx_mini_tshim/src/: lib.rs
sgx_mini_tunittest/: Cargo.toml
sgx_mini_tunittest/src/: lib.rs
sgx_mini_types/: Cargo.toml
sgx_mini_types/src/: lib.rs  thread.rs
sgx_mini_urts/: Cargo.toml
sgx_mini_urts/src/: enclave.rs  lib.rs
sgx_mini_ushim/: Cargo.toml
sgx_tseal/: Cargo.toml
sgx_tseal/src/: internal.rs  lib.rs  rsgx.rs
sgx_urts/src/: lib.rs
